# gh-actions

./: OpenVS.bat  README.md  script.sh
.github/workflows/: CMake-build.yml  PR-test.yml
src/: CMakeLists.txt  HelloWorld.cpp
src/StaticLib/: CMakeLists.txt  StaticLib.cpp  StaticLib.h
